--- a/library.data/library.data.csproj
+++ b/library.data/library.data.csproj
@@ -29,5 +29,19 @@
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Contracts\IRepository.cs" />
+    <Compile Include="BookRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\library.domain\library.domain.csproj">
+      <Project>{CF218010-4861-46C3-8C3A-A58C019E3B9F}</Project>
+      <Name>library.domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
