--- a/library.domain/library.domain.csproj
+++ b/library.domain/library.domain.csproj
@@ -29,5 +29,10 @@
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="Enums.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
