--- a/library.service/library.service.csproj
+++ b/library.service/library.service.csproj
@@ -30,8 +30,22 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
+    <Compile Include="BookService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Contracts\IBookService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\library.domain\library.domain.csproj">
+      <Project>{CF218010-4861-46C3-8C3A-A58C019E3B9F}</Project>
+      <Name>library.domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\library.data\library.data.csproj">
+      <Project>{C8FDD100-8A25-404E-960D-A398C07B6D98}</Project>
+      <Name>library.data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
