--- a/library.domain/library.domain.csproj
+++ b/library.domain/library.domain.csproj
@@ -33,6 +33,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Member.cs" />
+    <Compile Include="MemberBook.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
